objects/gvp__Territory_Goal__c.object
<CustomObject>
    <description>Deprecated. Please contact GreatVines Support to transition Goal types as of Spring 2012.</description>
    <fields>
        <fullName>gvp__Brand__c</fullName>
        <formula>gvp__Region_Goal__r.gvp__Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Territory Goals</relationshipLabel>
        <relationshipName>Territory_Depletion_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__End_Date__c</fullName>
        <formula>gvp__Region_Goal__r.gvp__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Estimate__c</fullName>
        <description>Latest Estimate</description>
        <inlineHelpText>Latest Estimate</inlineHelpText>
        <label>Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Estimate_vs_Plan_Cases__c</fullName>
        <formula>gvp__Estimate__c - gvp__X9L_Depletion_Plan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimate vs Plan Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Estimate_vs_Plan__c</fullName>
        <formula>gvp__Estimate__c / gvp__X9L_Depletion_Plan__c</formula>
        <label>Estimate vs Plan %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>gvp__Goal_Key__c</fullName>
        <externalId>true</externalId>
        <label>Territory Goal Key</label>
        <length>225</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Goal__c</fullName>
        <formula>gvp__Region_Goal__r.gvp__Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Goal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Label__c</fullName>
        <formula>gvp__Region_Goal__r.gvp__Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Mid_Month__c</fullName>
        <label>Mid-Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Mid_Month_vs_Plan_Cases__c</fullName>
        <formula>gvp__X9L_Depletion_Plan__c -  gvp__Mid_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mid-Month vs Plan Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Mid_Month_vs_Plan__c</fullName>
        <formula>gvp__Mid_Month__c / gvp__X9L_Depletion_Plan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mid-Month vs Plan %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>gvp__Plan_YTD__c</fullName>
        <formula>IF(MONTH( gvp__Start_Date__c ) &lt; MONTH(TODAY()),  gvp__X9L_Depletion_Plan__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Plan_vs_Goal_Cases__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unused Field 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Plan_vs_Goal__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unused Field 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>gvp__Region_Goal__c</fullName>
        <label>Region Goal</label>
        <referenceTo>gvp__Region_Goal__c</referenceTo>
        <relationshipLabel>Territory Goals</relationshipLabel>
        <relationshipName>Territory_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gvp__Start_Date__c</fullName>
        <formula>gvp__Region_Goal__r.gvp__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>gvp__Territory__c</referenceTo>
        <relationshipLabel>Territory Goals</relationshipLabel>
        <relationshipName>Territory_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__X9L_Depletion_Goal__c</fullName>
        <description>Do not use this field</description>
        <inlineHelpText>Do not use this field</inlineHelpText>
        <label>Unused Field (Use Case Plan)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__X9L_Depletion_Plan__c</fullName>
        <label>Case Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Territory Goal</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <columns>gvp__Goal__c</columns>
        <columns>gvp__Territory__c</columns>
        <columns>gvp__Distributor__c</columns>
        <columns>gvp__Brand__c</columns>
        <columns>gvp__Label__c</columns>
        <columns>gvp__Start_Date__c</columns>
        <columns>gvp__X9L_Depletion_Plan__c</columns>
        <columns>gvp__Estimate__c</columns>
        <columns>gvp__Estimate_vs_Plan_Cases__c</columns>
        <columns>gvp__Estimate_vs_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>gvp__Chateau_St_James</fullName>
        <columns>NAME</columns>
        <columns>gvp__Start_Date__c</columns>
        <columns>gvp__Territory__c</columns>
        <columns>gvp__Distributor__c</columns>
        <columns>gvp__X9L_Depletion_Plan__c</columns>
        <columns>gvp__Estimate__c</columns>
        <columns>gvp__Estimate_vs_Plan_Cases__c</columns>
        <columns>gvp__Estimate_vs_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>gvp__Brand__c</field>
            <operation>equals</operation>
            <value>Chateau St. James</value>
        </filters>
        <label>Chateau St. James</label>
    </listViews>
    <listViews>
        <fullName>gvp__January_2010</fullName>
        <columns>NAME</columns>
        <columns>gvp__Start_Date__c</columns>
        <columns>gvp__Territory__c</columns>
        <columns>gvp__Distributor__c</columns>
        <columns>gvp__X9L_Depletion_Plan__c</columns>
        <columns>gvp__Estimate__c</columns>
        <columns>gvp__Estimate_vs_Plan_Cases__c</columns>
        <columns>gvp__Estimate_vs_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>gvp__Start_Date__c</field>
            <operation>equals</operation>
            <value>1/1/2010</value>
        </filters>
        <label>January 2010</label>
    </listViews>
    <nameField>
        <displayFormat>TGL-{000000000}</displayFormat>
        <label>Territory Goal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>